# wts

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  pytest.ini  todo.md
.claude/: settings.json
.wts/: settings.yaml
docs/: worktree-design.md
src/wts/: config.py  exceptions.py
src/wts/cli/: __init__.py  autocomplete.py  autocomplete_cmd.py  commit.py  complete.py  completion.py  completion_cmd.py  config.py  create.py  delete.py  init.py  list.py  main.py  select.py
src/wts/core/: editor.py  git.py  terminal.py  worktree.py
tests/: conftest.py  test_commit.py  test_complete.py  test_completion.py  test_config.py  test_create.py  test_create_e2e.py  test_delete.py  test_editor.py  test_git_errors.py  test_init.py  test_list.py  test_select.py  test_terminal.py
